@@ -1,6 +1,9 @@
 03 Sep 2008 - trunk
 -------------------
 
+ * Fixed XML DTD/Schema validation which will now fail after request body
+   processing errors, even if the XML parser returns a document tree.
+
  * Added ctl:requestBodyBuffering=on|off which, when enabled, will force
    the request body to be buffered and allow REQUEST_BODY to be inspected.
    Previously the REQUEST_BODY target was only populated if the request body
